# snipster

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  snipster.db
src/snipster/: __init__.py  __main__.py  api.py  cli.py  exceptions.py  models.py  repo.py  streamlit_app.py
tests/: test_api.py  test_cli.py  test_model.py  test_repo.py
