[project]
name = "snipster"
version = "0.1.0"
description = "Intermediate Cohort Project"
readme = "README.md"
authors = [
    { name = "jjeg1979", email = "jjeg1979@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pytest-mock>=3.14.1",
    "python-decouple>=3.8",
    "rich>=14.0.0",
    "ruff>=0.11.13",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
]

[project.scripts]
snipster = "snipster.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
    "psycopg2-binary>=2.9.10",
    "pytest-cov>=6.2.1",
    "ty>=0.0.1a11",
]


[tool.poe.tasks]
test         = "pytest -vv --cov=src --cov-report=term-missing --cov-report=html"
lint         = "ruff check src"
format       = "ruff format src"
format-check = "ruff check src --fix"
type-check   = "ruff typecheck src"
run          = "python -m snipster"  # or "uv run src/snipster/cli.py"
tc           = "ty check ."

[tool.setuptools]
package-dir = {"" = "src"}
